tests/invalid/ArrayEmpty_Invalid_1.whiley
function f(int x) -> int:
    return 1

public export method test():
    f([0;0])
